some changes for first assignment

--- a/index.html
+++ b/index.html
@@ -4,11 +4,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Page</title>
+    <meta name="author" content="Jonathan Villegas" />
+    <meta name="description" content="Practice page for WDD131 class." />
+    <link rel="stylesheet" href="/styles/base.css">
+    <script src="/scripts/getdates.js" defer></script>
+    <title>WDD 131 – Dynamic Web Fundamentals - Jonathan Villegas</title>
 </head>
-<h1>Test Page</h1>
+
 
 <body>
+    <header>
+        <h1>
+            WDD 131 - Dinamic Web Fundamentals - Jonathan Villegas
+        </h1>
+        <nav class="navigation-menu">
+            <a href=https://www.linkedin.com/in/jonathan-villegas-8a13654a/ role="menuitem">LinkedIn</a>
+            <a href=https://byupw.instructure.com/ role="menuitem">Canvas</a>
+            <a href=# role="menuitem">Scripture</a>
+            <a href=# role="menuitem">Final Project</a>
+
+
+
+        </nav>
+
+    </header>
+    <main>
+        <section class="card">
+            <h1>About me</h1>
+            <img src="/images/profile-image.jpg">
+            <p class="content">
+
+            </p>
+
+        </section>
+        <section class="card">
+            <h1>Projects</h1>
+            <img src="#">
+            <p class="content">
+
+            </p>
+
+        </section>
+
+
+    </main>
+    <footer>
+        <p>
+            Copyright <span id="currentyear"></span>
+
+        </p>
+        <p id="lastmodified">
+
+        </p>
+
+    </footer>
+
 
 </body>
 
