--- a/index.html
+++ b/index.html
@@ -33,14 +33,25 @@
             <h1>About me</h1>
             <img src="/images/profile-image.jpg">
             <p class="content">
+                My name is Jonathan Villegas and I live in Mendoza, Argentina. I live with my wife and my
+                doughter. I am currently working as a Travel Agent offering services provided in Mendoza and
+                in other areas of Argentina and the world. I like technology and because of that I am learning now
+                about Web Development.
 
             </p>
 
         </section>
         <section class="card">
             <h1>Projects</h1>
-            <img src="#">
+            <img src="/images/index-icon.svg">
             <p class="content">
+
+                <a>https://ikatuviajes.tur.ar/</a>
+                <a>https://jonathanvillegas2015.wordpress.com/</a>
+                <a>https://ikatuviajes.tur.ar/</a>
+
+
+
 
             </p>
 
@@ -50,7 +61,7 @@
     </main>
     <footer>
         <p>
-            Copyright <span id="currentyear"></span>
+            © Copyright <span id="currentyear"></span>
 
         </p>
         <p id="lastmodified">
