--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jonathan Villegas" />
     <meta name="description" content="Practice page for WDD131 class." />
-    <link rel="stylesheet" href="/styles/base.css">
+    <link rel="stylesheet" href="styles/base.css">
     <script src="/scripts/getdates.js" defer></script>
     <title>WDD 131 – Dynamic Web Fundamentals - Jonathan Villegas</title>
 </head>
@@ -31,7 +31,7 @@
     <main>
         <section class="card">
             <h1>About me</h1>
-            <img src="/images/profile-image.jpg">
+            <img src="images/profile-image.jpg">
             <p class="content">
                 My name is Jonathan Villegas and I live in Mendoza, Argentina. I live with my wife and my
                 doughter. I am currently working as a Travel Agent offering services provided in Mendoza and
