other url change

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </section>
         <section class="card">
             <h1>Projects</h1>
-            <img src="/images/index-icon.svg">
+            <img src="images/index-icon.svg">
             <p class="content">
 
                 <a>https://ikatuviajes.tur.ar/</a>
