more css changes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
             <p class="content">
                 My name is Jonathan Villegas and I live in Mendoza, Argentina. I live with my wife and my
                 doughter. I am currently working as a Travel Agent offering services provided in Mendoza and
-                in other areas of Argentina and the world. I like technology and because of that I am learning now
+                in other areas of Argentina and the world.
+            </p>
+            <p class="content">
+                I like technology and because of that I am learning now
                 about Web Development.
 
             </p>
@@ -47,10 +50,28 @@
             <p class="content">
 
                 <a>https://ikatuviajes.tur.ar/</a>
+
+
+
+
+
+
+            </p>
+            <p class="content">
+
+
                 <a>https://jonathanvillegas2015.wordpress.com/</a>
+
+
+
+
+            </p>
+            <p class="content">
+
+
+
+
                 <a>https://ikatuviajes.tur.ar/</a>
-
-
 
 
             </p>
