--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jonathan Villegas" />
     <meta name="description" content="Practice page for WDD131 class." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Rowdies:wght@300;400;700&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/base.css">
     <script src="/scripts/getdates.js" defer></script>
     <title>WDD 131 – Dynamic Web Fundamentals - Jonathan Villegas</title>
@@ -46,7 +51,7 @@
         </section>
         <section class="card">
             <h1>Projects</h1>
-            <img src="images/idex-icon.svg">
+            <img src="images/projects-image.jpg">
             <p class="content">
 
                 <a>https://ikatuviajes.tur.ar/</a>
@@ -82,7 +87,7 @@
     </main>
     <footer>
         <p>
-            © Copyright <span id="currentyear"></span>
+            © Copyright <span id="currentyear"></span> Jonathan Villegas, Mendoza
 
         </p>
         <p id="lastmodified">
