other changes for submitting the assignment

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     </header>
     <main>
         <section class="card">
-            <h1>About me</h1>
+            <div class="title">
+                <h1>About me</h1>
+            </div>
             <img src="images/profile-image.jpg">
             <p class="content">
                 My name is Jonathan Villegas and I live in Mendoza, Argentina. I live with my wife and my
@@ -50,7 +52,9 @@
 
         </section>
         <section class="card">
-            <h1>Projects</h1>
+            <div class="title">
+                <h1>Projects</h1>
+            </div>
             <img src="images/projects-image.jpg">
             <p class="content">
 
@@ -90,7 +94,7 @@
             © Copyright <span id="currentyear"></span> Jonathan Villegas, Mendoza
 
         </p>
-        <p id="lastmodified">
+        <p id="lastmodified">Last Modified:
 
         </p>
 
