some css and html changes

--- a/index.html
+++ b/index.html
@@ -17,88 +17,78 @@
 </head>
 
 
-<body>
-    <header>
-        <h1>
-            WDD 131 - Dinamic Web Fundamentals - Jonathan Villegas
-        </h1>
-        <nav class="navigation-menu">
-            <a href=https://www.linkedin.com/in/jonathan-villegas-8a13654a/ role="menuitem">LinkedIn</a>
-            <a href=https://byupw.instructure.com/ role="menuitem">Canvas</a>
-            <a href=# role="menuitem">Scripture</a>
-            <a href=# role="menuitem">Final Project</a>
+<br>
+<header>
+    <h1>
+        WDD 131 - Dinamic Web Fundamentals - Jonathan Villegas
+    </h1>
+    <nav class="navigation-menu">
+        <a href=https://www.linkedin.com/in/jonathan-villegas-8a13654a/ role="menuitem">LinkedIn</a>
+        <a href=https://byupw.instructure.com/ role="menuitem">Canvas</a>
+        <a href=# role="menuitem">Scripture</a>
+        <a href=# role="menuitem">Final Project</a>
 
 
 
-        </nav>
+    </nav>
 
-    </header>
-    <main>
-        <section class="card">
-            <div class="title">
-                <h1>About me</h1>
-            </div>
-            <img src="images/profile-image.jpg">
-            <p class="content">
-                My name is Jonathan Villegas and I live in Mendoza, Argentina. I live with my wife and my
-                doughter. I am currently working as a Travel Agent offering services provided in Mendoza and
-                in other areas of Argentina and the world.
-            </p>
-            <p class="content">
-                I like technology and because of that I am learning now
-                about Web Development.
+</header>
+<main>
+    <section class="card">
+        <div class="title">
+            <h1>About me</h1>
+        </div>
+        <img src="images/profile-image.jpg">
+        <p class="content">
+            My name is Jonathan Villegas and I live in Mendoza, Argentina. I live with my wife and my
+            doughter. I am currently working as a Travel Agent offering services provided in Mendoza and
+            in other areas of Argentina and the world.
 
-            </p>
-
-        </section>
-        <section class="card">
-            <div class="title">
-                <h1>Projects</h1>
-            </div>
-            <img src="images/projects-image.jpg">
-            <p class="content">
-
-                <a>https://ikatuviajes.tur.ar/</a>
-
-
-
-
-
-
-            </p>
-            <p class="content">
-
-
-                <a>https://jonathanvillegas2015.wordpress.com/</a>
-
-
-
-
-            </p>
-            <p class="content">
-
-
-
-
-                <a>https://ikatuviajes.tur.ar/</a>
-
-
-            </p>
-
-        </section>
-
-
-    </main>
-    <footer>
-        <p>
-            © Copyright <span id="currentyear"></span> Jonathan Villegas, Mendoza
-
-        </p>
-        <p id="lastmodified">Last Modified:
+            I like technology and because of that I am learning now
+            about Web Development.
 
         </p>
 
-    </footer>
+    </section>
+    <section class="card">
+        <div class="title">
+            <h1>Projects</h1>
+        </div>
+        <img src="images/projects-image.jpg">
+        <p class="content">
+
+        <ul>
+            <li> <a>https://ikatuviajes.tur.ar/</a> </li>
+
+
+            <li><a>https://jonathanvillegas2015.wordpress.com/</a></li>
+
+
+
+            <li><a>https://ikatuviajes.tur.ar/</a></li>
+        </ul>
+
+
+        </p>
+
+    </section>
+    <section class="thanks-message">
+        <p> Thanks for visiting this webpage! </p>
+    </section>
+
+
+</main>
+
+<footer>
+    <p>
+        © Copyright <span id="currentyear"></span> Jonathan Villegas, Mendoza
+
+    </p>
+    <p id="lastmodified">Last Modified:
+
+    </p>
+
+</footer>
 
 
 </body>
