first javascript changes

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <footer>
     <p>
-        © Copyright <span id="currentyear"></span> Jonathan Villegas, Mendoza
+        <span id="currentyear"></span> © Copyright Jonathan Villegas, Mendoza
 
     </p>
     <p id="lastmodified">Last Modified:
