--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <span id="currentyear"></span> © Copyright Jonathan Villegas, Mendoza
 
     </p>
-    <p id="lastmodified">Last Modified:
+    <p> Last Modified: <span id="lastmodified"></span>
 
     </p>
 
