some html changes , 1st- review before submitting

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <nav class="navigation-menu">
         <a href=https://www.linkedin.com/in/jonathan-villegas-8a13654a/ role="menuitem">LinkedIn</a>
         <a href=https://byupw.instructure.com/ role="menuitem">Canvas</a>
-        <a href=# role="menuitem">Scripture</a>
+        <a href=https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/58?lang=eng&id=p27-p29#p27
+            role="menuitem">Scripture</a>
         <a href=# role="menuitem">Final Project</a>
 
 
