url corrections on hrtml and css

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
         <p class="content">
 
         <ul>
-            <li> <a>https://ikatuviajes.tur.ar/</a> </li>
+            <li> <a href="https://ikatuviajes.tur.ar/">Wordpress Website</a> </li>
 
 
-            <li><a>https://jonathanvillegas2015.wordpress.com/</a></li>
+            <li><a href="https://jonathanvillegas2015.wordpress.com/">My first personal Wordpress website</a></li>
 
 
 
-            <li><a>https://ikatuviajes.tur.ar/</a></li>
+            <li><a href="https://joribavi.github.io/wdd130/wwr/">My Last Course Webpage on Github</a></li>
         </ul>
 
 
