changes after validation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>
         WDD 131 - Dinamic Web Fundamentals - Jonathan Villegas
     </h1>
-    <nav class="navigation-menu">
+    <nav class="navigation-menu" role="menu">
         <a href=https://www.linkedin.com/in/jonathan-villegas-8a13654a/ role="menuitem">LinkedIn</a>
         <a href=https://byupw.instructure.com/ role="menuitem">Canvas</a>
         <a href=https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/58?lang=eng&id=p27-p29#p27
@@ -39,7 +39,7 @@
         <div class="title">
             <h1>About me</h1>
         </div>
-        <img src="images/profile-image.jpg">
+        <img src="images/profile-image.jpg" alt="profile-image">
         <p class="content">
             My name is Jonathan Villegas and I live in Mendoza, Argentina. I live with my wife and my
             doughter. I am currently working as a Travel Agent offering services provided in Mendoza and
@@ -55,7 +55,7 @@
         <div class="title">
             <h1>Projects</h1>
         </div>
-        <img src="images/projects-image.jpg">
+        <img src="images/projects-image.jpg" alt="projects-image">
         <p class="content">
 
         <ul>
