css changes for submission

--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
             about Web Development.
 
         </p>
+        <h1>Mendoza</h1>
+
+        <p class="content">
+
+            Just a couple words to introduce you the place where I live in. Mendoza is one of the biggest
+            cities in Argentina and one of the most important provinces in the west side of the country. It hosts many
+            different economic activities such us agriculture, wine making, tourism, petrol and a small software
+            factory.
+
+
+        </p>
 
     </section>
     <section class="card">
@@ -56,6 +67,11 @@
             <h1>Projects</h1>
         </div>
         <img src="images/projects-image.jpg" alt="projects-image">
+        <p class="content">
+            These are links to my first web Development projects, two of them done just with wordpress templates.
+            One of my goals is to create my own templates and being able to build functional webpages.
+
+        </p>
         <p class="content">
 
         <ul>
