some of the last changes for activity week2

--- a/temples.html
+++ b/temples.html
@@ -48,9 +48,9 @@
                 </figcaption>
             </figure>
             <figure>
-                <img src="images/mendoza_argentina_temple.jpeg" alt="Mendoza Temple">
+                <img src="images/buenos-aires-argentina-temple.jpg" alt="Buenos Aires Temple">
                 <figcaption>
-                    Mendoza Temple
+                    Buenos Aires Temple
                 </figcaption>
             </figure>
             <figure>
