--- a/temples.html
+++ b/temples.html
@@ -54,63 +54,63 @@
                 </figcaption>
             </figure>
             <figure>
-                <img src="images/mendoza_argentina_temple.jpeg" alt="Mendoza Temple">
+                <img src="images/cordoba-argentina-temple.jpg" alt="Cordoba Temple">
                 <figcaption>
-                    Mendoza Temple
+                    Cordoba Temple
                 </figcaption>
             </figure>
             <figure>
-                <img src="images/mendoza_argentina_temple.jpeg" alt="Mendoza Temple">
+                <img src="images/concepcion-chile-temple.jpg" alt="Concepcion Temple">
                 <figcaption>
-                    Mendoza Temple
+                    Concepción Temple
                 </figcaption>
             </figure>
             <figure>
-                <img src="images/mendoza_argentina_temple.jpeg" alt="Mendoza Temple">
+                <img src="images/santiago-chile-temple.jpg" alt="Santiago Temple">
                 <figcaption>
-                    Mendoza Temple
+                    Santiago de Chile Temple
                 </figcaption>
             </figure>
             <figure>
-                <img src="images/mendoza_argentina_temple.jpeg" alt="Mendoza Temple">
+                <img src="images/paraguay-asuncion-temple.jpeg" alt="Asunción Temple">
                 <figcaption>
-                    Mendoza Temple
+                    Asunción Temple
                 </figcaption>
             </figure>
             <figure>
-                <img src="images/mendoza_argentina_temple.jpeg" alt="Mendoza Temple">
+                <img src="images/mexico-city-temple.jpg" alt="Mexico City Temple">
                 <figcaption>
-                    Mendoza Temple
+                    Mexico City Temple
                 </figcaption>
             </figure>
             <figure>
-                <img src="images/mendoza_argentina_temple.jpeg" alt="Mendoza Temple">
+                <img src="images/frankfurt-temple.jpg" alt="Frankfurt Temple">
                 <figcaption>
-                    Mendoza Temple
+                    Frankfurt Temple
                 </figcaption>
             </figure>
             <figure>
-                <img src="images/mendoza_argentina_temple.jpeg" alt="Mendoza Temple">
+                <img src="images/guayaquil-ecuador-temple.jpg" alt="Guayaquiel Temple">
                 <figcaption>
-                    Mendoza Temple
+                    Guayaquil Temple
                 </figcaption>
             </figure>
             <figure>
-                <img src="images/mendoza_argentina_temple.jpeg" alt="Mendoza Temple">
+                <img src="images/salt-lake-city-temple" alt="Salt Lake Temple">
                 <figcaption>
-                    Mendoza Temple
+                    Salk City Temple
                 </figcaption>
             </figure>
             <figure>
-                <img src="images/mendoza_argentina_temple.jpeg" alt="Mendoza Temple">
+                <img src="images/sao-paulo-brazil-temple.jpg" alt="Sao Paulo Temple">
                 <figcaption>
-                    Mendoza Temple
+                    Sao Paulo Temple
                 </figcaption>
             </figure>
             <figure>
-                <img src="images/mendoza_argentina_temple.jpeg" alt="Mendoza Temple">
+                <img src="images/uruguay-montevideo-temple.jpg" alt="Montevideo Temple">
                 <figcaption>
-                    Mendoza Temple
+                    Montevideo Temple
                 </figcaption>
             </figure>
 
