temple name change

--- a/temples.html
+++ b/temples.html
@@ -98,7 +98,7 @@
             <figure>
                 <img src="images/salt-lake-city-temple" alt="Salt Lake Temple">
                 <figcaption>
-                    Salk City Temple
+                    Salk Lake City Temple
                 </figcaption>
             </figure>
             <figure>
