--- a/temples.html
+++ b/temples.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Picture Album WDD131</title>
     <meta name="author" content="Jonathan Villegas">
-    <meta name="description" content="Week02 Activity: Picture Album" </head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta name="description" content="Week02 Activity: Picture Album" <link rel="preconnect"
+        href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rowdies:wght@300;400;700&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Varela+Round&display=swap"
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="temples.css">
     <link rel="stylesheet" href="temples-large.css">
     <script src="temples.js" defer></script>
+
+</head>
 
 <body>
     <header>
