other changes for activity week03

--- a/week03/place.html
+++ b/week03/place.html
@@ -27,20 +27,22 @@
             </picture>
             <div class="info-container" id="data">
                 <h2>Data</h2>
-                <p><strong>Area:</strong>148,827sq km</p>
-                <p><strong>Population:</strong>2,015,000</p>
+                <p><strong>Area:</strong> 2,780,000 sq km</p>
+                <p><strong>Population:</strong> 45,540,000</p>
                 <p><strong>Capital: </strong> Buenos Aires</p>
-                <p><strong>Language:</strong>Spanish</p>
-                <p><strong>Currency:</strong>Argentine Peso </p>
+                <p><strong>Language:</strong> Spanish</p>
+                <p><strong>Currency:</strong> Argentine Peso </p>
                 <p><strong>Time Zone:</strong> GMT -3</p>
-                <p><strong>Calling Code:</strong>+54 261 </p>
+                <p><strong>Calling Code:</strong>+54 </p>
                 <p><strong>Internet TLD:</strong> .ar</p>
 
 
             </div>
-            <div class="info-container" id="wheather">
+            <div class="info-container" id="weather">
                 <h2>Weather</h2>
-                <img id="wheather-icon" src="wheather-icon.svg" alt="Weather Icon">
+                <div class="icon-wrapper">
+                    <img id="weather-icon" src="weather-icon.svg" alt="Weather Icon">
+                </div>
                 <p><strong> Temperature: </strong> <span id="temperature"></span></p>
                 <p><strong> Conditions: </strong><span id="conditions"></span></p>
                 <p><strong>Wind: </strong><span id="wind"></span></p>
