--- a/week03/place.html
+++ b/week03/place.html
@@ -16,8 +16,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles/place-styles.css">
     <script src="place.js" defer></script>
-    <meta name="author" content="Jonathan Villegas" />
-    <meta name="description" content="Place Webpage Week03 | WDD-131" />
+    <meta name="author" content="Jonathan Villegas">
+    <meta name="description" content="Place Webpage Week03 | WDD-131">
 
 </head>
 
