working on week04 assignment

--- a/week04/filtered-temples.html
+++ b/week04/filtered-temples.html
@@ -41,80 +41,9 @@
     <main>
         <h1>Home</h1>
 
-        <!--Figure Elements-->
+        <!--class figure-container for js-->
         <div class="figure-container">
-            <figure>
-                <img src="images/mendoza_argentina_temple.jpeg" alt="Mendoza Temple">
-                <figcaption>
-                    Mendoza Temple
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="images/buenos-aires-argentina-temple.jpg" alt="Buenos Aires Temple">
-                <figcaption>
-                    Buenos Aires Temple
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="images/cordoba-argentina-temple.jpg" alt="Cordoba Temple">
-                <figcaption>
-                    Cordoba Temple
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="images/concepcion-chile-temple.jpg" alt="Concepcion Temple">
-                <figcaption>
-                    Concepción Temple
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="images/santiago-chile-temple.jpg" alt="Santiago Temple">
-                <figcaption>
-                    Santiago de Chile Temple
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="images/paraguay-asuncion-temple.jpeg" alt="Asunción Temple">
-                <figcaption>
-                    Asunción Temple
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="images/mexico-city-temple.jpg" alt="Mexico City Temple">
-                <figcaption>
-                    Mexico City Temple
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="images/frankfurt-temple.jpg" alt="Frankfurt Temple">
-                <figcaption>
-                    Frankfurt Temple
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="images/guayaquil-ecuador-temple.jpg" alt="Guayaquiel Temple">
-                <figcaption>
-                    Guayaquil Temple
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="images/salt-lake-city-temple" alt="Salt Lake Temple">
-                <figcaption>
-                    Salk Lake City Temple
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="images/sao-paulo-brazil-temple.jpg" alt="Sao Paulo Temple">
-                <figcaption>
-                    Sao Paulo Temple
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="images/uruguay-montevideo-temple.jpg" alt="Montevideo Temple">
-                <figcaption>
-                    Montevideo Temple
-                </figcaption>
-            </figure>
+
 
         </div>
     </main>
