working with temples old js

--- a/week04/filtered-temples.html
+++ b/week04/filtered-temples.html
@@ -29,11 +29,11 @@
         <a id="hamburguer-menu" href="#"></a>
         <nav>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Old</a></li>
-                <li><a href="#">New</a></li>
-                <li><a href="#">Large</a></li>
-                <li><a href="#">Small</a></li>
+                <li><a href="filtered-temples.html">Home</a></li>
+                <li><a id="temples-old">Old</a></li>
+                <li><a id="temples-new">New</a></li>
+                <li><a id="temples-large">Large</a></li>
+                <li><a id="temples-small">Small</a></li>
             </ul>
         </nav>
 
