some changes before submission

--- a/week04/filtered-temples.html
+++ b/week04/filtered-temples.html
@@ -39,7 +39,7 @@
 
     </header>
     <main>
-        <h1>Home</h1>
+        <h1>Gallery</h1>
 
         <!--class figure-container for js-->
         <div class="figure-container">
