adding wirefram to site plan

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -30,7 +30,7 @@
     <main>
         <section class="content">
             <h2>Site Name</h2>
-            <p>The name of the website will be https://joribavi.github.io/wdd131/cusco-travel-agency.html
+            <p>The name of the website will be <a> https://joribavi.github.io/wdd131/cusco-travel-agency.html</a>
                 It will be focused on tourist services offered in the City of Cusco, Peru and it will give a basic
                 summary of the company history and goals.
             </p>
@@ -47,11 +47,11 @@
             </ul>
             <h2>Color Schema</h2>
             <ul>
-                <li><strong> Orange: </strong> </li>
+                <li id="orange"><strong> Orange: </strong> </li>
                 <p>#DB3100 . It will be used in buttons or links</p>
-                <li><strong>Yellow:</strong> </li>
+                <li id="yellow"><strong>Yellow:</strong> </li>
                 <p>#DE942C . It will be the color of cards</p>
-                <li><strong>Red:</strong> </li>
+                <li id="red"><strong>Red:</strong> </li>
                 <li> #DC2130 . It will be used for headings</li>
 
 
@@ -59,11 +59,14 @@
             <h2>Typography</h2>
             <li><strong>Noto Sans:</strong> </li>
             <p>This font will be used for paragraphs</p>
-            <li><strong>Outfit</strong></li>
+            <li><strong>Outfit:</strong></li>
             <p>This font will be utilized with Headings</p>
 
             <h2>Wireframe</h2>
-            <img src="#"></img>
+            <h3>Mobile View</h3>
+            <img src="../project/images/mobile-view.png"></img>
+            <h3>Desktop View</h3>
+            <img src="../project/images/desktop-view.png"></img>
 
 
 
