some css changes for week 5 first assignment

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -29,44 +29,54 @@
 <body>
     <main>
         <section class="content">
-            <h2>Site Name</h2>
-            <p>The name of the website will be <a> https://joribavi.github.io/wdd131/cusco-travel-agency.html</a>
-                It will be focused on tourist services offered in the City of Cusco, Peru and it will give a basic
-                summary of the company history and goals.
-            </p>
+            <div class="sub-section">
+                <h2>Site Name</h2>
+                <p>The name of the website will be <a> https://joribavi.github.io/wdd131/cusco-travel-agency.html</a>
+                    It will be focused on tourist services offered in the City of Cusco, Peru and it will give a basic
+                    summary of the company history and goals.
+                </p>
 
-            <h2>Site Purpose</h2>
-            <p>The purpose of this website will be to get the attention of travelers that are interested in visiting
-                Cusco and its surroundings with
-                the assistance of professionals </p>
-            <h2>Scenarios</h2>
-            <ul>
-                <li> What are the best activities in Cusco? </li>
-                <li> How can I find a reliable travel agency in Peru? </li>
+                <h2>Site Purpose</h2>
+                <p>The purpose of this website will be to get the attention of travelers that are interested in visiting
+                    Cusco and its surroundings with
+                    the assistance of professionals </p>
+                <h2>Scenarios</h2>
+                <ul>
+                    <li> What are the best activities in Cusco? </li>
+                    <li> How can I find a reliable travel agency in Peru? </li>
 
-            </ul>
-            <h2>Color Schema</h2>
-            <ul>
-                <li id="orange"><strong> Orange: </strong> </li>
-                <p>#DB3100 . It will be used in buttons or links</p>
-                <li id="yellow"><strong>Yellow:</strong> </li>
-                <p>#DE942C . It will be the color of cards</p>
-                <li id="red"><strong>Red:</strong> </li>
-                <li> #DC2130 . It will be used for headings</li>
+                </ul>
+                <h2>Color Schema</h2>
+                <ul>
+                    <li id="orange"><strong> Orange: </strong> </li>
+                    <p>#DB3100 . It will be used in buttons or links</p>
+                    <li id="yellow"><strong>Yellow:</strong> </li>
+                    <p>#DE942C . It will be the color of cards</p>
+                    <li id="red"><strong>Red:</strong> </li>
+                    <li> #DC2130 . It will be used for h1 and h2 headings</li>
+                    <li id="blue"><strong>Blue:</strong> </li>
+                    <li> #DC2130 . It will be used for h3 and h4 headings</li>
 
 
-            </ul>
-            <h2>Typography</h2>
-            <li><strong>Noto Sans:</strong> </li>
-            <p>This font will be used for paragraphs</p>
-            <li><strong>Outfit:</strong></li>
-            <p>This font will be utilized with Headings</p>
+                </ul>
+                <h2>Typography</h2>
+                <li><strong>Noto Sans:</strong> </li>
+                <p>This font will be used for paragraphs</p>
+                <li><strong>Outfit:</strong></li>
+                <p>This font will be utilized with Headings</p>
+            </div>
+            <div class="sub-section">
 
-            <h2>Wireframe</h2>
-            <h3>Mobile View</h3>
-            <img src="../project/images/mobile-view.png"></img>
-            <h3>Desktop View</h3>
-            <img src="../project/images/desktop-view.png"></img>
+                <h2>Wireframe</h2>
+                <h3>Mobile View</h3>
+                <img src="../project/images/mobile-view.png">
+            </div>
+            <div class="sub-section">
+                <h3>Desktop View</h3>
+                <img src="../project/images/desktop-view1.png">
+                <img src="../project/images/desktop-view2.png">
+            </div>
+
 
 
 
