--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -53,9 +53,9 @@
                     <li id="yellow"><strong>Yellow:</strong> </li>
                     <p>#DE942C . It will be the color of cards</p>
                     <li id="red"><strong>Red:</strong> </li>
-                    <li> #DC2130 . It will be used for h1 and h2 headings</li>
+                    <p> #DC2130 . It will be used for h1 and h2 headings</p>
                     <li id="blue"><strong>Blue:</strong> </li>
-                    <li> #DC2130 . It will be used for h3 and h4 headings</li>
+                    <p> #DC2130 . It will be used for h3 and h4 headings</p>
 
 
                 </ul>
@@ -72,6 +72,7 @@
                 <img src="../project/images/mobile-view.png">
             </div>
             <div class="sub-section">
+                <h2>Wireframe</h2>
                 <h3>Desktop View</h3>
                 <img src="../project/images/desktop-view1.png">
                 <img src="../project/images/desktop-view2.png">
