changes made after debugging

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -76,8 +76,8 @@
             <div class="sub-section">
                 <h2>Wireframe</h2>
                 <h3>Desktop View</h3>
-                <img src="../project/images/desktop-view1.png">
-                <img src="../project/images/desktop-view2.png">
+                <img src="../project/images/desktop-view1.png" alt="Wireframe DesktopView">
+                <img src="../project/images/desktop-view2.png" alt="Wireframe DesktopView">
             </div>
 
 
@@ -87,9 +87,6 @@
         </section>
 
     </main>
-    <footer>
-
-    </footer>
 
 </body>
 
