--- a/review.html
+++ b/review.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Jonathan Villegas">
     <meta name="description" content="Review Completion Form for Week05 Assignment WDD131">
     <link href="review.css" rel="stylesheet">
+    <script src="review.js" defer></script>
 </head>
 
 
@@ -16,10 +17,12 @@
     <main>
         <h1>Thanks for leaving us your review!</h1>
 
+        <p>This was the review number: <span id="reviews">0</span> </p>
+
 
     </main>
     <footer>
-
+        <strong>This is a sample Footer</strong>
     </footer>
 
 </body>
