week05 assignment, changes before debug

--- a/form.html
+++ b/form.html
@@ -28,22 +28,23 @@
                     </select>
                 </label>
                 <section class="rating">
-                    <span class="rating-title">Overall Rating</span>
+                    <label>Overall Rating</label>
                     <div class="stars-container">
 
 
 
-                        <label class="star-1"><input type="radio" name="1-star" value="star-1"> </label>
+
+                        <label class="star-1"><input type="radio" name="stars" value="star-1"> </label>
 
 
-                        <label class="star-2"><input type="radio" name="1-star" value="star-2"> </label>
+                        <label class="star-2"><input type="radio" name="stars" value="star-2"> </label>
 
-                        <label class="star-3"> <input type="radio" name="1-star" value="star-3"> </label>
+                        <label class="star-3"> <input type="radio" name="stars" value="star-3"> </label>
 
-                        <label class="star-4"><input type="radio" name="1-star" value="star-4"> </label>
+                        <label class="star-4"><input type="radio" name="stars" value="star-4"> </label>
 
 
-                        <label class="star-5"><input type="radio" name="1-star" value="star-5"> </label>
+                        <label class="star-5"><input type="radio" name="stars" value="star-5"> </label>
 
                     </div>
                 </section>
