first html and css works for project week06

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -31,7 +31,8 @@
         <section class="content">
             <div class="sub-section">
                 <h2>Site Name</h2>
-                <p>The name of the website will be <a> https://joribavi.github.io/wdd131/cusco-travel-agency.html</a>
+                <p>The name of the website will be <a>
+                        https://joribavi.github.io/wdd131/project/cusco-travel-agency.html</a>
                     It will be focused on tourist services offered in the City of Cusco, Peru and it will give a basic
                     summary of the company history and goals.
                 </p>
@@ -55,7 +56,7 @@
                     <li id="red"><strong>Red:</strong> </li>
                     <p> #DC2130 . It will be used for h1 and h2 headings</p>
                     <li id="blue"><strong>Blue:</strong> </li>
-                    <p> #DC2130 . It will be used for h3 and h4 headings</p>
+                    <p> rgb(26, 26, 131). It will be used for h3 and h4 headings</p>
 
 
                 </ul>
