working on week 06 assignment

--- a/project/cusco-travel-agency.html
+++ b/project/cusco-travel-agency.html
@@ -27,7 +27,7 @@
         <a id="hamburguer-menu" href="#"></a>
         <nav>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
+                <li><a href="cusco-travel-agency.html">Home</a></li>
                 <li><a href="#">Day Trips</a></li>
                 <li><a href="#">Inca Trail</a></li>
                 <li><a href="#">About Us</a></li>
