saving changes during development

--- a/project/resources.html
+++ b/project/resources.html
@@ -15,9 +15,13 @@
 
         <ul>
             <h1>Resource List</h1>
-            <li> <a href="https://www.canva.com/">Logo made in canva</a></li>
-            <li> <a href=""></a></li>
-            <li> <a href=""></a></li>
+            <li> <strong>Author: Jaesung An</strong><a href="">Hero1
+                    Image</a>https://pixabay.com/es/photos/per%C3%BA-machu-picchu-am%C3%A9rica-del-sur-3978148/</li>
+            <li> <strong>Author: Patricia van den Berg</strong><a href="">Hero 2
+                    Image</a>https://pixabay.com/es/photos/cusco-plaza-del-armas-per%C3%BA-3418555/</li>
+            <li> <strong>Author: Renzonapa</strong><a href="">Hero 3
+                    Image</a>https://pixabay.com/es/photos/cusco-calle-per%C3%BA-plaza-de-armas-143561/
+            </li>
         </ul>
 
 
