--- a/project/cusco-travel-agency.html
+++ b/project/cusco-travel-agency.html
@@ -37,22 +37,54 @@
     </header>
 
     <main>
+        <h1>Enjoy Cusco</h1>
         <section class="hero">
-            <h1>Enjoy Cusco</h1>
-            <img src="images/hero-image.jpg" alt="hero-image">
+            <div class="hero-image">
+                <img src="images/hero1.jpg" loading="lazy">
+                <div class="text">Culture & History</div>
+
+            </div>
+            <div class="hero-image">
+                <img src="images/hero2.jpg" loading="lazy">
+                <div class="text">A life Experience</div>
+
+            </div>
+
+            <div class="hero-image">
+                <img src="images/hero3.jpg" loading="lazy">
+                <div class="text">World Heritage</div>
+
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
 
         </section>
         <section class="tours">
+            <h2>Our Tours</h2>
+
+
 
         </section>
         <section class="testimonials">
+            <h2>What Our Customers say?</h2>
 
         </section>
         <section class="location">
-
+            <h3>Our Office</h3>
+            <h3>Contact Information</h3>
         </section>
         <section class="contact">
+            <form>
+                <fieldset>
+                    <h3>Contact Us</h3>
+                    <legend></legend>
+                </fieldset>
+
+            </form>
+
 
         </section>
 
