hmlt changes of this week

--- a/project/cusco-travel-agency.html
+++ b/project/cusco-travel-agency.html
@@ -96,6 +96,8 @@
 
     </main>
     <footer>
+        <div class="resources"><a href="resources.html">Click Here to Go to The Resources used for this website</a>
+        </div>
         <div class="social-media">
             <img src="#" alt="facebook">
             <img src="#" alt="instagram">
