advancing with some js css changes

--- a/project/cusco-travel-agency.html
+++ b/project/cusco-travel-agency.html
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-        <h1>Enjoy Cusco</h1>
+        <h1>Discover Cusco</h1>
         <section class="hero">
             <div class="hero-image">
                 <img src="images/hero1.jpg" loading="lazy">
@@ -62,8 +62,12 @@
 
 
         </section>
-        <section class="tours">
-            <h2>Our Tours</h2>
+
+        <!-- Tours Section buttons -->
+        <h2>Our Tours</h2>
+
+        <section class="tours-container">
+
 
 
 
