--- a/project/resources.html
+++ b/project/resources.html
@@ -22,6 +22,28 @@
             <li> <strong>Author: Renzonapa</strong><a href="">Hero 3
                     Image</a>https://pixabay.com/es/photos/cusco-calle-per%C3%BA-plaza-de-armas-143561/
             </li>
+            <li><strong>Author: Sarai Carrasco</strong><a href="">Tours-1 Image,
+                    https://www.pexels.com/es-es/foto/banco-pared-muro-sentado-20453588/
+                </a></li>
+            <li><strong>Author: Paolo Salazar</strong><a href="">Tours-2 Image,
+                    https://www.pexels.com/es-es/foto/machu-picchu-13080580/
+
+                </a></li>
+
+            <li><strong>Author: Jei Noa </strong><a href=""> Tours-3 Image
+                    https://www.pexels.com/es-es/foto/llamas-en-maras-18365720/
+                </a></li>
+
+            <li><strong>Author: </strong><a href="">
+
+                </a></li>
+            <li><strong>Author: </strong><a href="">
+
+                </a></li>
+
+
+
+
         </ul>
 
 
